fix dark mode

--- a/src/style/HeaderButtons.scss
+++ b/src/style/HeaderButtons.scss
@@ -2,7 +2,6 @@
     margin-right: 20px;
     position: relative;
     display: flex;
-    background-color: var(--color-white);
     float: right;
     z-index: 0;
     height: 80px;
