--- a/src/style/MainComponent.scss
+++ b/src/style/MainComponent.scss
@@ -5,12 +5,7 @@
     transition: color var(--duration) var(--timing), background-color var(--duration) var(--timing);
 }
 
-#root {
-    background-color: var(--color-white);
-}
-
 .main-component {
-    background-color: var(--color-white);
     display: block;
     width: 100%;
     height: calc(100vh - 80px);
